Update df section

--- a/pandas_01a.ipynb
+++ b/pandas_01a.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -178,13 +178,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.19592179, -0.77636675,  0.17576476, -0.67781818,  0.31553633])"
+       "array([-0.98899199,  0.67622427,  1.07229327, -0.66789179,  0.08898007])"
       ]
      },
      "metadata": {},
@@ -200,11 +200,11 @@
     {
      "data": {
       "text/plain": [
-       "4   -0.195922\n",
-       "3   -0.776367\n",
-       "2    0.175765\n",
-       "1   -0.677818\n",
-       "0    0.315536\n",
+       "4   -0.988992\n",
+       "3    0.676224\n",
+       "2    1.072293\n",
+       "1   -0.667892\n",
+       "0    0.088980\n",
        "dtype: float64"
       ]
      },
@@ -214,11 +214,11 @@
     {
      "data": {
       "text/plain": [
-       "0   -0.195922\n",
-       "1   -0.776367\n",
-       "2    0.175765\n",
-       "3   -0.677818\n",
-       "4    0.315536\n",
+       "0   -0.988992\n",
+       "1    0.676224\n",
+       "2    1.072293\n",
+       "3   -0.667892\n",
+       "4    0.088980\n",
        "dtype: float64"
       ]
      },
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -328,10 +328,10 @@
     "**data** can be of different structures:\n",
     "\n",
     "- a Python dict of any of the ff:\n",
-    "  - 1D ndarrays\n",
-    "  - lists\n",
-    "  - dicts\n",
     "  - Series\n",
+    "  - lists\n",
+    "  - 1D ndarrays\n",
+    "  - dicts\n",
     "- a 2D NumPy ndarray\n",
     "- a Series\n",
     "- structured or record ndarray\n",
@@ -347,8 +347,192 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### **DataFrame:** Python dict as Data\n",
+    "#### **DataFrame:** dict of Series as Data\n",
     "\n",
+    "When creating a DataFrame from a dict of Series, the resulting index will be the union of the indices of the various Series.\n",
+    "\n",
+    "**from series**: guide note  \n",
+    "When passing in a Python dict, the keys will act as the labels. If an index is passed, it will be the size of the Series instead of the data's size. If an index is passed, it will check against the dict keys, and order the Series according to the order of the index. Values in the index that do not exist in the dict passed to data will be represented as NaN.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'one': a    1.0\n",
+       " b    2.0\n",
+       " c    3.0\n",
+       " dtype: float64,\n",
+       " 'two': a      one\n",
+       " b      two\n",
+       " c    three\n",
+       " d     four\n",
+       " dtype: object}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>one</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>two</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>three</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>four</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   one    two\n",
+       "a  1.0    one\n",
+       "b  2.0    two\n",
+       "c  3.0  three\n",
+       "d  NaN   four"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>four</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>one</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>two</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   one   two\n",
+       "d  NaN  four\n",
+       "a  1.0   one\n",
+       "b  2.0   two"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create a dict containing Series\n",
+    "s1 = pd.Series([1.0, 2.0, 3.0], index=[\"a\", \"b\", \"c\"])\n",
+    "s2 = pd.Series([\"one\", \"two\", \"three\", \"four\"], index=[\"a\", \"b\", \"c\", \"d\"])\n",
+    "\n",
+    "d = {\n",
+    "    \"one\": s1,\n",
+    "    \"two\": s2,\n",
+    "}\n",
+    "display(d)\n",
+    "printhr()\n",
+    "\n",
+    "# Create DataFrame\n",
+    "# Missing data is set to NaN\n",
+    "df = pd.DataFrame(d)\n",
+    "display(df)\n",
+    "\n",
+    "# When index is passed, it dictates the order\n",
+    "df = pd.DataFrame(d, index=[\"d\", \"a\", \"b\"])\n",
+    "display(df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### **DataFrame:** dict of Lists as Data\n",
+    "wip\n",
     "\n",
     "\n",
     "\n",
@@ -361,9 +545,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Foo': [2, 5, 5], 'Bar': [9, 2, 7]}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Foo    [2, 5, 5]\n",
+       "Bar    [9, 2, 7]\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Foo</th>\n",
+       "      <th>Bar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Foo  Bar\n",
+       "0    2    9\n",
+       "1    5    2\n",
+       "2    5    7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Passing in a dict\n",
     "data = {\"Foo\": [2, 5, 5], \"Bar\": [9, 2, 7]}\n",
@@ -377,13 +637,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Foo': [2, 5, 5], 'Bar': 9}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Foo    [2, 5, 5]\n",
+       "Bar            9\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Foo</th>\n",
+       "      <th>Bar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Foo  Bar\n",
+       "0    2    9\n",
+       "1    5    9\n",
+       "2    5    9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Passing in a dict with list as value\n",
+    "# Passing in a dict of lists\n",
     "data = {\"Foo\": [2, 5, 5], \"Bar\": 9}\n",
     "display(data)\n",
+    "printhr()\n",
     "\n",
     "s = pd.Series(data)\n",
     "df = pd.DataFrame(data)\n",
@@ -393,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
