--- a/pandas_02.ipynb
+++ b/pandas_02.ipynb
@@ -9,6 +9,8 @@
     "# Row and Column Selection\n",
     "Selecting rows and columns of **dataframe** and **series**. \n",
     "\n",
+    "#TODO add selecting by dot notation and [] notation (actually alreayd exists here. Just organize.)\n",
+    "\n",
     "---"
    ]
   },
