--- a/pandas_03.ipynb
+++ b/pandas_03.ipynb
@@ -6,8 +6,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Indices (Indexes?)\n",
-    "How to use, set, and reset indices.\n",
+    "# Indexes\n",
+    "How to use, set, and reset index.\n",
+    "\n",
+    "#TODO add using index section\n",
     "\n",
     "---"
    ]
@@ -376,7 +378,6 @@
    "outputs": [],
    "source": [
     "# Select a row and see its record\n",
-    "\n",
     "df.loc[38]"
    ]
   },
@@ -399,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sort label indices\n",
+    "# Sort label indexes\n",
     "schema_df.sort_index()"
    ]
   }
