--- a/pandas_04a.ipynb
+++ b/pandas_04a.ipynb
@@ -9,6 +9,8 @@
     "# Filtering\n",
     "Using conditionals to filter rows and columns.\n",
     "\n",
+    "#TODO test out filtering in series\n",
+    "\n",
     "---"
    ]
   },
