Remove one comment character. Yep

--- a/pandas_05a.ipynb
+++ b/pandas_05a.ipynb
@@ -104,7 +104,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Assigning Columns Labels\n",
+    "## Assigning Column Labels\n",
     "We can assign or rename columns in a 2 ways:  \n",
     "- Using the `.columns` attribute\n",
     "- Using the `.rename()` method\n",
