Add filter example for drop()

--- a/pandas_06a.ipynb
+++ b/pandas_06a.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1552,6 +1552,145 @@
     "\n",
     "# Remove row\n",
     "df.drop(3, inplace=True)\n",
+    "display(df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "**Remove filtered data using `drop()`** \n",
+    "\n",
+    "A filter can be used remove rows by taking the indexes of the filter and passing it on.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>email</th>\n",
+       "      <th>full_name</th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>lorem@yahoo.com</td>\n",
+       "      <td>Lorem Ipsum</td>\n",
+       "      <td>Lorem</td>\n",
+       "      <td>Ipsum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>john@gmail.com</td>\n",
+       "      <td>John Doe</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "      <td>Jane Doe</td>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              email    full_name  first   last\n",
+       "0   lorem@yahoo.com  Lorem Ipsum  Lorem  Ipsum\n",
+       "1    john@gmail.com     John Doe   John    Doe\n",
+       "2  jane@outlook.com     Jane Doe   Jane    Doe"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>email</th>\n",
+       "      <th>full_name</th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>lorem@yahoo.com</td>\n",
+       "      <td>Lorem Ipsum</td>\n",
+       "      <td>Lorem</td>\n",
+       "      <td>Ipsum</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             email    full_name  first   last\n",
+       "0  lorem@yahoo.com  Lorem Ipsum  Lorem  Ipsum"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Remove rows having last name Doe\n",
+    "display(df)\n",
+    "\n",
+    "# Create filter\n",
+    "filt = df[\"last\"].str.lower() == \"doe\"\n",
+    "df.drop(df[filt].index, inplace=True)\n",
     "display(df)"
    ]
   }
