Add formatting for console output.

--- a/pandas_06a.ipynb
+++ b/pandas_06a.ipynb
@@ -196,6 +196,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "0    Lorem Ipsum\n",
@@ -275,6 +282,8 @@
     "# Add a new column that combines the first and last name\n",
     "\n",
     "display(df)\n",
+    "printhr()\n",
+    "\n",
     "full_name_series = df[\"first\"] + \" \" + df[\"last\"]\n",
     "display(full_name_series)\n",
     "\n",
@@ -371,6 +380,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -435,6 +451,8 @@
     "# Note that we are not applying this change (inplace=False)\n",
     "\n",
     "display(df)\n",
+    "printhr()\n",
+    "\n",
     "a = df.drop(labels=\"last\", axis=1)\n",
     "display(a)\n"
    ]
@@ -508,6 +526,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -560,6 +585,8 @@
     "# Note that we are not applying this change (inplace=False)\n",
     "\n",
     "display(df)\n",
+    "printhr()\n",
+    "\n",
     "a = df.drop(labels=[0, 1])\n",
     "display(a)"
    ]
@@ -633,6 +660,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -693,6 +727,8 @@
     "# We are applying this change (inplace=True)\n",
     "\n",
     "display(df)\n",
+    "printhr()\n",
+    "\n",
     "df.drop(columns=[\"first\", \"last\"], inplace=True)\n",
     "display(df)"
    ]
@@ -773,6 +809,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "0    [Lorem, Ipsum]\n",
@@ -787,10 +830,11 @@
    ],
    "source": [
     "## Create a DataFrame of 2 columns with the full_name column\n",
-    "\n",
     "# With expand=False (default)\n",
     "\n",
     "display(df)\n",
+    "printhr()\n",
+    "\n",
     "split_df = df[\"full_name\"].str.split(\" \")\n",
     "display(split_df)\n",
     "\n",
@@ -856,6 +900,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
     },
     {
      "data": {
@@ -978,6 +1029,7 @@
    ],
    "source": [
     "display(df)\n",
+    "printhr()\n",
     "\n",
     "# With expand=True\n",
     "split_df = df[\"full_name\"].str.split(\" \", expand=True)\n",
@@ -995,7 +1047,7 @@
    "source": [
     "---\n",
     "## Adding Rows\n",
-    "To add rows to Series and DataFrames, we can use the `concat()` function. `concat()` #TODO\n",
+    "To add rows to Series and DataFrames, we can use the `concat()` function. `concat()`\n",
     "\n",
     "**Note:** this method does not modify the original df. Modify the original by setting the inplace parameter to True.  \n",
     "\n",
@@ -1069,6 +1121,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
     },
     {
      "data": {
@@ -1191,6 +1250,8 @@
     "# Create row to be added\n",
     "\n",
     "display(df)\n",
+    "printhr()\n",
+    "\n",
     "new_row = pd.DataFrame(\n",
     "    {\n",
     "        \"first\": \"Ken\",\n",
@@ -1483,6 +1544,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -1549,6 +1617,7 @@
    "source": [
     "# Say we want to remove Ken Adams\n",
     "display(df)\n",
+    "printhr()\n",
     "\n",
     "# Remove row\n",
     "df.drop(3, inplace=True)\n",
@@ -1570,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1637,6 +1706,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -1687,6 +1763,7 @@
    "source": [
     "# Remove rows having last name Doe\n",
     "display(df)\n",
+    "printhr()\n",
     "\n",
     "# Create filter\n",
     "filt = df[\"last\"].str.lower() == \"doe\"\n",
